# orbita

./: .env.example  .gitignore  README.md  install.ps1  pyproject.toml
docs/superpowers/plans/: 2026-03-21-telegram-lmstudio-ollama-windows-mcp.md
skills/battery/: SKILL.md
skills/brightness/: SKILL.md
skills/browser_control/: SKILL.md
skills/clipboard/: SKILL.md
skills/desktop_summary/: SKILL.md
skills/disk_cleanup/: SKILL.md
skills/file_search/: SKILL.md
skills/focus_mode/: SKILL.md
skills/network_drives/: SKILL.md
skills/network_info/: SKILL.md
skills/news_rss/: SKILL.md
skills/notify/: SKILL.md
skills/open_app/: SKILL.md
skills/power_control/: SKILL.md
skills/process_manager/: SKILL.md
skills/screenshot/: SKILL.md
skills/scripting/: SKILL.md
skills/services/: SKILL.md
skills/system_info/: SKILL.md
skills/temperature/: SKILL.md
skills/volume_control/: SKILL.md
skills/web_scraping/: SKILL.md
skills/window_manager/: SKILL.md
src/orbita/: __init__.py  app.py  audit.py  cli.py  config.py  diagnostics.py  env_file.py  main.py  memory.py  native_actions.py  skills.py  telegram_api.py
src/orbita/clients/: __init__.py  lmstudio.py  ollama.py  web_scraper.py
tests/: test_cli.py  test_config.py  test_env_file.py  test_lmstudio_client.py  test_router.py  test_telegram_api.py  test_web_scraper.py
